trunk/Archive2/71/7388f859a6545a/output
main.cpp:2:10: error: 'Color::Color' has the same name as the class in which it is declared
     enum Color {red, blue, green};
          ^
